--- a/css/site.styl
+++ b/css/site.styl
@@ -248,6 +248,9 @@ img
   max-width: 100%
   height: auto
 
+#globie, #generator
+  display: none
+
 // ******************************************************
 
 // MEDIA QUERIES
